--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "react": "^0.14.9 || ^15.3.0 || ^16.0.0"
   },
   "devDependencies": {
+    "eslint": "^3.0.0",
     "eslint-config-jonnybuchanan": "5.0.x",
     "nwb": "0.17.x",
-    "react": "15.x",
-    "react-dom": "15.x"
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   },
   "author": "Jonny Buchanan <jonathan.buchanan@gmail.com>",
   "homepage": "https://github.com/insin/react-maskedinput",
